--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=user-service
 server.port= 8090
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/FMS-User
@@ -10,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8088/eureka
+eureka.instance.hostname=localhost
