--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,18 @@
 			<version>4.0.1</version> <!-- Use the appropriate version -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+		<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version> <!-- Use the appropriate version -->
+    <scope>test</scope>
+</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -136,6 +148,30 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+	<version>0.8.7</version>
+	<executions>
+		<execution>
+			<id>prepare-agent</id>
+			<goals>
+				<goal>prepare-agent</goal>
+			</goals>
+		</execution>
+		<execution>
+                        <id>report</id>
+          		<goals>
+            			<goal>report</goal>
+          		</goals>
+          		<configuration>
+            			<formats>
+              				<format>XML</format>
+            			</formats>
+          		</configuration>
+        	</execution>
+      </executions>
+</plugin>
 		</plugins>
 	</build>
 	<repositories>
