--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.fmsUser</groupId>
 	<artifactId>FMS_User</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>FMS_User</name>
 	<description>FMS_User</description>
 	<properties>
